# packages-manager

./: .gitignore  CMakeLists.txt  README.md
packages-manager/: CMakeLists.txt  PackagesManager.cpp  PackagesManager.h  main.cpp
storage/: pkgs.json
tests/: CMakeLists.txt  PackagesManagerTest.cpp
